--- a/scaffCalc/Base.lproj/Main.storyboard
+++ b/scaffCalc/Base.lproj/Main.storyboard
@@ -73,6 +73,17 @@
                                     <constraint firstAttribute="width" secondItem="0Ry-IY-emN" secondAttribute="height" multiplier="374:243" id="Wox-XO-S8Q"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Is far from wall:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i5R-jo-6uX">
+                                <rect key="frame" x="82" y="726" width="117" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="921-j3-32c">
+                                <rect key="frame" x="285" y="721" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </switch>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xpf-ds-PE6">
                                 <rect key="frame" x="0.0" y="365" width="414" height="216"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -98,6 +109,7 @@
                     <connections>
                         <outlet property="hasLadders" destination="DV5-LG-qPe" id="bbn-jr-NP2"/>
                         <outlet property="hasStairs" destination="5C0-ie-yH7" id="1JC-Hg-mad"/>
+                        <outlet property="isFarFromWall" destination="921-j3-32c" id="V7j-YR-Tp6"/>
                         <outlet property="pickerView" destination="xpf-ds-PE6" id="Gp7-8a-Qg2"/>
                         <outlet property="scaffDisplayOutlet" destination="0Ry-IY-emN" id="UAo-23-vH0"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="results" id="hme-Wz-O6D"/>
@@ -116,7 +128,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xE0-2H-RUE">
-                                <rect key="frame" x="10" y="393" width="394" height="459"/>
+                                <rect key="frame" x="10" y="388.5" width="394" height="463.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="itemCell" rowHeight="120" id="nKQ-MT-bl7" customClass="ItemCellTableViewCell" customModule="scaffCalc" customModuleProvider="target">
@@ -173,19 +185,10 @@
                                 </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u8G-yw-NIM" userLabel="scaffContainer">
-                                <rect key="frame" x="10" y="88" width="394" height="300"/>
-                                <subviews>
-                                    <stackView opaque="NO" contentMode="scaleAspectFit" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="V7J-Si-qXy">
-                                        <rect key="frame" x="10" y="10" width="374" height="280"/>
-                                    </stackView>
-                                </subviews>
+                                <rect key="frame" x="10" y="88" width="394" height="295.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="V7J-Si-qXy" secondAttribute="trailing" constant="10" id="0f2-16-Pxn"/>
-                                    <constraint firstAttribute="height" constant="300" id="9Oi-pR-YRh"/>
-                                    <constraint firstAttribute="bottom" secondItem="V7J-Si-qXy" secondAttribute="bottom" constant="10" id="DpG-u3-ief"/>
-                                    <constraint firstItem="V7J-Si-qXy" firstAttribute="leading" secondItem="u8G-yw-NIM" secondAttribute="leading" constant="10" id="RS9-nZ-lOG"/>
-                                    <constraint firstItem="V7J-Si-qXy" firstAttribute="top" secondItem="u8G-yw-NIM" secondAttribute="top" constant="10" id="V4l-J0-fsy"/>
+                                    <constraint firstAttribute="width" secondItem="u8G-yw-NIM" secondAttribute="height" multiplier="200:150" id="FWo-wj-Nfm"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -205,7 +208,6 @@
                     <connections>
                         <outlet property="itemsTableView" destination="xE0-2H-RUE" id="dst-K8-VsH"/>
                         <outlet property="scaffContainer" destination="u8G-yw-NIM" id="QXb-Oa-m6J"/>
-                        <outlet property="scaffView" destination="V7J-Si-qXy" id="aBt-cU-vWb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
